--- a/css/style.css
+++ b/css/style.css
@@ -57,14 +57,14 @@ body, html{
 	top:50%;
 	width:100%;
 	text-align:center;
-	color:#000;
+  color:#000; 
 	font-size:27px;
 	letter-spacing:8px;
 	text-transform:uppercase;
 }
 
 .ptext .border{
-	background-color:#111;
+	background-color:;
 	color:#fff;
 	padding:20px;
 }
