--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,87 @@
-body, html{	
+body,
+html {
 	height: 100%;
 	margin: 0;
-	font-size:16px;
+	font-size: 16px;
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
 	line-height: 1.8em;
-	color:#666;
+	color: #666;
 }
 
-.pimg1, .pimg2, .pimg3{
-	position:relative;
+.pimg1,
+.pimg2,
+.pimg3 {
+	position: relative;
 	opacity: 0.70;
-	background-position:center;
-	background-size:cover;
-	background-repeat:no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
 
 	/*
 	fixed = parallax
 	scroll = normal
 	*/
 
-	background-attachment:fixed;
-}
-.pimg1{	
-	background-image:url('../img/image1.jpg');
-	min-height:100%;
+	background-attachment: fixed;
 }
 
-.pimg2{	
-	background-image:url('../img/image2.jpg');
-	min-height:400px;
+.pimg1 {
+	background-image: url('../img/image1.jpg');
+	min-height: 100%;
 }
 
-.pimg3{	
-	background-image:url('../img/image3.jpg');
-	min-height:400px;
+.pimg2 {
+	background-image: url('../img/image2.jpg');
+	min-height: 400px;
 }
 
-.section{	
-	text-align:center;
+.pimg3 {
+	background-image: url('../img/image3.jpg');
+	min-height: 400px;
+}
+
+.section {
+	text-align: center;
 	padding: 50px 80px;
 }
 
-.section-light{
-	background-color:#f4f4f4;
-	color#666;
+.section-light {
+	background-color: #f4f4f4;
+	color: #666;
 }
 
-.section-dark{
-	background-color:#282e34;
-	color:#ddd;
+.section-dark {
+	background-color: #282e34;
+	color: #ddd;
 }
 
-.ptext{
-	position:absolute;
-	top:50%;
-	width:100%;
-	text-align:center;
-  color:#000; 
-	font-size:27px;
-	letter-spacing:8px;
-	text-transform:uppercase;
+.ptext {
+	position: absolute;
+	top: 50%;
+	width: 100%;
+	text-align: center;
+	color: #000;
+	font-size: 27px;
+	letter-spacing: 8px;
+	text-transform: uppercase;
 }
 
-.ptext .border{
-	background-color:;
-	color:#fff;
-	padding:20px;
+.ptext .border {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
 }
 
-.ptext .border.trans{
-	background:transparent;
+.ptext .border.trans {
+	background: transparent;
 }
 
-@media(max-width:568px){
-	.pimg1, .pimg2, .pimg3{
-		background-attachment:scroll;
-	}	
+@media(max-width:568px) {
+
+	.pimg1,
+	.pimg2,
+	.pimg3 {
+		background-attachment: scroll;
+	}
 }
-
-
